--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,10 +6,16 @@
     sign up and share your thoughts with us in 5-140 character chunks.
   </p>
   
-  <% unless signed_in? %>
-    <p>
-       <%= link_to 'Sign Up', new_user_path, class: 'btn btn-primary btn-large' %>
-    </p>
-  <% end %>
+ <% if signed_in? %>
+	<%= render 'micro_posts/form' %>
+	<%= will_paginate @feed %>
+	<div id="user_feed">
+	<%= render @feed %>
+ </div>
+<% else %>
+ <p>
+ <%= link_to 'Sign Up', new_user_path, class: 'btn btn-primary btn-large' %>
+ </p>
+<% end %>
 
 </div>
